修复手机端项目模块内容显示适配问题

--- a/Home/about.html
+++ b/Home/about.html
@@ -39,7 +39,7 @@
                     <p><span style="font-size: 15pt;">若是对我满意，请记得联系我！！</span></p>
 <!--                    <span>「<a href="../resume/yangmufa.docx" download="简历(练习生菜鲲).doc">文档简历</a>」</span>-->
                     <span>「<a href="#">文档简历</a>」</span>
-                    <span>「<a href="https://www.yangmufa.com/resume">网页简历</a>」</span>
+                    <span>「<a href="#">网页简历</a>」</span>
                     <p></p>
                     <p><span style="font-size: 18pt;">关于本站</span></p>
                     <p>
@@ -47,12 +47,12 @@
                             本网站定位为&nbsp;
                             <a href="https://www.yangmufa.com">个人主页</a>
                             &nbsp;用于&nbsp;
-                            <a href="https://www.trainees.cn">Trainees</a>&nbsp;、
-                            <a href="https://gitee.com/DevCaikun/RuoyiUltraMono">RuoYi-Ultra-Mono</a>&nbsp;、
-                            <a href="https://gitee.com/DevCaikun/RuoyiUltraCloud">RuoYi-Ultra-Cloud</a>&nbsp;、
-                            <a href="https://gitee.com/DevCaikun/iBlogUltra">iBlog-Ultra</a>、
-                            <a href="https://gitee.com/DevCaikun/iBlogPro">iBlog-Pro</a>&nbsp;、
-                            <a href="https://gitee.com/DevCaikun/iBlogMini">iBlog-Mini</a>&nbsp;
+                            <a href="https://www.trainees.cn"></a>&nbsp;、
+                            <a href="https://gitee.com/DevCaikun/TraineesAdmin.Net">TraineesAdmin.Net</a>&nbsp;、
+                            <a href="https://gitee.com/DevCaikun/TraineesWorkflow.Net">TraineesWorkflow.Net</a>&nbsp;、
+                            <a href="https://gitee.com/DevCaikun/TraineesBlog.Net">TraineesBlog.Net</a>、
+                            <a href="https://gitee.com/DevCaikun/TraineesBlog4J">TraineesBlog4J</a>&nbsp;
+                            <a href="https://gitee.com/DevCaikun/TraineesHomepage">TraineesHomepage</a>&nbsp;、
                             项目导流和个人简介.
                         </span>
                     </p>
