--- a/Home/index.html
+++ b/Home/index.html
@@ -49,7 +49,7 @@
             <div class="cd-half-width">
                 <h2 style="font-weight: bold">程序员菜鲲</h2>
                 <p style="font-weight: bold">来自&nbsp;练习生基地</p>
-                <p>.Net & Java 开发者、个人站长</p>
+                <p>.Net & Java 开发者、个人站长、开源项目作者</p>
                 <p>爱音乐、爱折腾、爱生活、会找资源的好人</p>
                 <a class="cd-btn" href="about.html">本站简介</a>
             </div>
@@ -60,7 +60,7 @@
             <div class="cd-full-width">
                 <h2>生活日志</h2>
                 <p>记录生活点滴，分享人生喜乐！</p>
-                <a class="cd-btn" href="https://ibm.trainees.cn" target="_blank">iBlogMini</a>
+                <a class="cd-btn" href="https://www.trainees.cn/record" target="_blank">说说</a>
             </div>
         </li>
         <li>
