--- a/Home/product.html
+++ b/Home/product.html
@@ -19,7 +19,7 @@
 <body>
     <!-- Header -->
     <div class="nav">
-        <a class="logo" href="index.html"><img src="style/images/YMFlogo.png" width="40" title="程序员菜鲲"></a>
+        <a class="logo" href="index.html"><img src="style/images/YMFlogo.png" width="40" title="程序员菜鲲" alt=""></a>
         <a class="logo pull-right sobtn"><span class="glyphicon glyphicon-search" style="color: #B4B4B4;"></span></a>
     </div>
     <div class="container">
@@ -31,50 +31,43 @@
             <div class="linkb">
                 <ul class="row">
                     <li class="col-md-4">
-                        <a href="https://www.trainees.cn" target="_blank">
+                        <a href="https://gitee.com/DevCaikun/TraineesAdmin.Net" target="_blank">
                             <img src="https://itblog.yangmufa.com/img/itBlogLogo.png" width="30"  alt=""/>
-                            <b>Trainees（练习生基地）</b>
-                            <div>编程知识社区: 编程练习生,两年之有余</div>
-                            <p>唱跳、rap、篮球、coding</p>
+                            <b>TraineesAdmin.Net（练习生中后台框架）</b>
+                            <div></div>
+                            <p>基于C#+.Net8+Abp.vNext+Furion+PostgreSql+Vue的DDD领域驱动微服务后台管理框架, 内置用户权限管理、日志、工作流、博客、社区、代码生成、Admin等模块,可根据需要新增模块即可轻松集成.，、</p>
                         </a>
                     </li>
                     <li class="col-md-4">
-                        <a href="https://gitee.com/DevCaikun/RuoyiUltraMono" target="_blank">
+                        <a href="https://gitee.com/DevCaikun/TraineesWorkflow.Net" target="_blank">
                             <img src="https://itblog.yangmufa.com/img/itBlogLogo.png" width="30"  alt=""/>
-                            <b>RuoYi-Ultra-Mono（若依超金单体版）</b>
-                            <div>基于若依Vue增强</div>
+                            <b>TraineesWorkflow.Net（练习生工作流框架)</b>
+<!--                            <div></div>-->
+                            <p>基于TraineesAdmin.Net的工作流框架</p>
                         </a>
                     </li>
                     <li class="col-md-4">
-                        <a href="https://gitee.com/DevCaikun/RuoyiUltraCloud" target="_blank">
+                        <a href="hhttps://gitee.com/DevCaikun/TraineesBlog.Net" target="_blank">
                             <img src="https://itblog.yangmufa.com/img/itBlogLogo.png" width="30"  alt=""/>
-                            <b>RuoYi-Ultra-Cloud（若依超金微服务版）</b>
-                            <div>基于若依Cloud增强</div>
-                            <p></p>
+                            <b>TraineesBlog（练习生博客.Net版）</b>
+<!--                            <div></div>-->
+                            <p>基于TraineesAdmin.Net的博客项目</p>
                         </a>
                     </li>
                     <li class="col-md-4">
-                        <a href="https://gitee.com/DevCaikun/iBlogMini" target="_blank">
+                        <a href="https://gitee.com/DevCaikun/TraineesBlog4J" target="_blank">
                             <img src="https://itblog.yangmufa.com/img/itBlogLogo.png" width="30"  alt=""/>
-                            <b>iBlog-Mini（智慧博客纯净版）</b>
-                            <div>基于React+Markdon</div>
-                            <p>轻量的知识体系博客系统,优点是成本低开发快,能满足所有博客需求并构建属于自己的知识体系/资源导航等.</p>
+                            <b>TraineesBlog4J（练习生博客Java版）</b>
+<!--                            <div></div>-->
+                            <p>基于JDK21+SpringBoot3+PostgreSql17+React19的博客项目, 内置后台管理、权限管理、代码生成、资源导航、技术百科等模块</p>
                         </a>
                     </li>
                     <li class="col-md-4">
                         <a href="https://gitee.com/DevCaikun/iBlogPro" target="_blank">
                             <img src="https://itblog.yangmufa.com/img/itBlogLogo.png" width="30"  alt=""/>
-                            <b>iBlog-Pro（智慧博客专业版）</b>
-                            <div>基于RuoYi-Ultra-Mono</div>
-                            <p>基于Java和Ract和Vue的前后端分离项目,知识体系博客系统,适用于&nbsp后端或偏全栈程序员.</p>
-                        </a>
-                    </li>
-                    <li class="col-md-4">
-                        <a href="https://gitee.com/DevCaikun/iBlogUltra" target="_blank">
-                            <img src="https://itblog.yangmufa.com/img/itBlogLogo.png" width="30"  alt=""/>
-                            <b>iBlog-Ultra（智慧博客超金版）</b>
-                            <div>基于RuoYi-Ultra-Cloud</div>
-                            <p></p>
+                            <b>TraineesHomepage（程序员个人主页介绍）</b>
+<!--                            <div></div>-->
+                            <p>炫酷的唯美的程序员专属个人主页,采用TypeScript5 + Vite6 + Axios2 + Vue3 + Ant Design Vue 4 + SCSS2</p>
                         </a>
                     </li>
 <!--                    <li class="col-md-4">-->
@@ -93,20 +86,21 @@
 <!--                    </li>-->
                 </ul>
                 <div class="linka">
-                    <h3>申请友链请发邮箱</h3>
+                    <h3>申请友链请发如下格式内容到&nbsp;yangmufa@163.com</h3>
                     <br>
-                    <div><a href="https://trainees.cn">本站标题：iBlogPro-智慧博客</a></div>
-                    <div><a href="https://trainees.cn">本站链接：https://ibp.trainees.cn</a></div>
+                    <div>网站标题：TraineesBlog-练习生博客</div>
+                    <div>网站链接：https://www.trainees.cn</div>
+                    <div>网站Logo：https://img.trainees.com/bog/logo.jgp</div>
                     <hr/>
-                    <div>申请友情链接之前请先在贵站做好本站的链接，然后通过以上格式发送Email，我将在最短的时间回复。
-                        <p>
-                            Email：
-                            <!--<a href="https://mail.qq.com/cgi-bin/qm_share?t=qm_mailme&email=yangmufa@qq.com" target="_blank">yangmufa@163.com</a>-->
-                            <a href="https://mail.163.com/index.htm?from=163navi&regPage=163" target="_blank">yangmufa@163.com</a>
-                        </p>
+                    <div>申请友情链接之前请先在贵站链好本站如上内容，然后通过以上格式发送Email，我将在最短的时间回复。
+<!--                        <p>-->
+<!--                            Email：-->
+<!--                            <a href="https://mail.qq.com/cgi-bin/qm_share?t=qm_mailme&email=yangmufa@qq.com" target="_blank">yangmufa@163.com</a>-->
+<!--                            <a href="https://mail.163.com/index.htm?from=163navi&regPage=163" target="_blank">yangmufa@163.com</a>-->
+<!--                        </p>-->
                     </div>
                     <hr/>
-                    <a href="https://ibu.trainees.cn/friend">友链将展示在：https://ibu.trainees.cn/friend</a>
+                    <a href="https://www.trainees.cn/friend">友链将展示在：https://www.trainees.cn/friend</a>
                 </div>
             </div>
 
