修复手机端项目模块内容显示适配问题

--- a/iHome/product.html
+++ b/iHome/product.html
@@ -47,7 +47,7 @@
                         </a>
                     </li>
                     <li class="col-md-4">
-                        <a href="hhttps://gitee.com/DevCaikun/TraineesBlog.Net" target="_blank">
+                        <a href="https://gitee.com/DevCaikun/TraineesBlog.Net" target="_blank">
                             <img src="https://itblog.yangmufa.com/img/itBlogLogo.png" width="30"  alt=""/>
                             <b>TraineesBlog（练习生博客.Net版）</b>
 <!--                            <div></div>-->
@@ -63,7 +63,7 @@
                         </a>
                     </li>
                     <li class="col-md-4">
-                        <a href="https://gitee.com/DevCaikun/iBlogPro" target="_blank">
+                        <a href="https://gitee.com/DevCaikun/TraineesHomepage" target="_blank">
                             <img src="https://itblog.yangmufa.com/img/itBlogLogo.png" width="30"  alt=""/>
                             <b>TraineesHomepage（程序员个人主页介绍）</b>
 <!--                            <div></div>-->
@@ -73,14 +73,14 @@
 <!--                    <li class="col-md-4">-->
 <!--                        <a href="https://www.yangmufa.com" target="_blank">-->
 <!--                            <img src="https://itblog.yangmufa.com/img/itBlogLogo.png" width="30"  alt=""/>-->
-<!--                            <b>Home（智慧主页）</b>-->
+<!--                            <b>iHome（智慧主页）</b>-->
 <!--                            <div>炫酷的个人IP网页.</div>-->
 <!--                        </a>-->
 <!--                    </li>-->
 <!--                    <li class="col-md-4">-->
 <!--                        <a href="https://www.yangmufa.com/resume" target="_blank">-->
 <!--                            <img src="https://itblog.yangmufa.com/img/itBlogLogo.png" width="30"  alt=""/>-->
-<!--                            <b>Resume（智慧简历）</b>-->
+<!--                            <b>iResume（智慧简历）</b>-->
 <!--                            <div>炫酷的个人简历网页.</div>-->
 <!--                        </a>-->
 <!--                    </li>-->
